--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -1,9 +1,5 @@
 <ul class="posts">
-  <li class="posts-labelgroup" id="posts-labelgroup">
-    <h2 id="posts-label">Posts</h2>
-  </li>
-
-  {%- for post in site.data.resources -%}
+  {%- for post in site.posts -%}
     {% include article.html %}
   {%- endfor -%}
 </ul>
