various scss components and structs
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,9 @@
 
 // Bases
 @import "bases/fonts";
+
+// Structures
+@import "structs/body";
+@import "structs/header";
+
+@import "structs/footer";
