--- a/_includes/article.html
+++ b/_includes/article.html
@@ -3,6 +3,14 @@
 	<a class="post-link" href="{{ post.url | relative_url }}">
 		<h2 class="post-title">{{ post.title | escape }}</h2>
 	</a>
+	{%- if post.cover -%}
+	<div class="post-cover">
+		<img src="{{post.cover}}" />
+	</div>
+	{%- endif -%}
+	<div class="post">
+		{{ post.content }}
+	</div>
 	<div class="post-meta">
 		<div class="post-date">
 			<i class="far fa-calendar-alt"></i>
@@ -12,8 +20,5 @@
 			{% include categories.html target=post %}
 			{% include tags.html target=post %}
 		</div>
-	</div>
-	<div class="post">
-		{{ post.content }}
 	</div>
 </li>
