--- a/_sass/structs/body.scss
+++ b/_sass/structs/body.scss
@@ -7,6 +7,17 @@ body {
 a {
 	color: rgb(0, 122,255);
 	color: -apple-system-blue;
+	text-decoration: none;
+	transition: color 0.2s ease-in;
+
+	&:hover {
+		color: blue;
+    	color: -webkit-link;
+	}
+	
+	&:visited {
+		color: visitedtext;
+	}
 }
 
 p, blockquote {
@@ -20,4 +31,11 @@ body > * {
 	max-width: 640px;
 	max-width: 64ch;
 	margin: 0 auto;
+}
+
+@media only screen and (max-width:768px) {
+	body > * {
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}	
 }
