--- a/_sass/components/logo.scss
+++ b/_sass/components/logo.scss
@@ -1,3 +1,36 @@
 #logo {
 	display: flex;
+	
+	h1 {
+		width: 60px;
+		height: 60px;
+		display: block;
+		
+	    text-indent: 100000%;
+	    white-space: nowrap;
+	    overflow: hidden;
+		
+		background: transparent url(../icons/appicon.png);
+		background-size: 100%;
+		
+	    a {
+		    width: 100%;
+			height: 100%;
+			display: block;
+	    }
+	}
+}
+
+@media (-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi) {
+	#logo h1 {
+		background-image: url(../icons/appicon@2x.png);
+	}
+}
+
+@media (-webkit-min-device-pixel-ratio: 3), 
+(min-resolution: 384dpi) {
+	#logo h1 {
+		background-image: url(../icons/appicon@3x.png);
+	}
 }
