--- a/_sass/components/post.scss
+++ b/_sass/components/post.scss
@@ -67,12 +67,14 @@
 		
 		pre {
 			padding: 1rem;
+			background-color: rgb(248,248,253);
 		}
 	}
 	
 	p code {
 		padding: 0.125rem 0.25rem;
 		border-radius: 0.25rem;
+		background-color: rgb(248,248,253);
 	}
 	
 	blockquote {
@@ -94,6 +96,29 @@
 			border-radius: 1pt;
 			opacity: 0.7;
 		}
+	}
+}
+
+.post__footer {
+	.post__meta, .post__edit {
+		margin: 0;
+		font-size: 0.85rem;
+	}
+	
+	.post__edit {
+		color: rgb(120, 120, 125);
+	}
+	
+	.post__meta {
+		margin-bottom: 1em;
+		
+		dd {
+			margin-inline-start: 0px;
+		}
+		
+			div > * {
+				display: inline;
+			}
 	}
 }
 
