--- a/_sass/structs/footer.scss
+++ b/_sass/structs/footer.scss
@@ -1,7 +1,8 @@
 footer {
 	padding: 1rem;
-	background: rgba(0,0,0,.1);
-	background: -apple-system-quaternary-label;
+	background: rgb(248,248,253);
 	border-radius: 12pt;
 	margin: 2rem auto;
+	
+	color: rgb(120, 120, 125);
 }
