--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,11 +3,12 @@
 {%- include head.html -%}
 <body class="{% if page.style %}{{ page.style }}{% endif %} blog">
   {%- include blogHeader.html -%}
-  <main class="container readable">
+  <main>
     {%- if paginator.total_pages > 0 -%}
     <ul class="post-list">
       {%- for post in paginator.posts -%}
-      <li>
+      <hr />
+      <li class="container readable">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <h3>
           <a class="post-link" href="{{ post.url | absolute_url }}">
@@ -21,7 +22,7 @@
     </ul>
     {% if paginator.total_pages > 1 %}
     <!-- Pagination links -->
-    <div class="pagination">
+    <div class="container readable pagination">
       {% if paginator.previous_page %}
         <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
       {% endif %}
