--- a/_sass/layouts/blog.scss
+++ b/_sass/layouts/blog.scss
@@ -1,7 +1,5 @@
 body.blog {
-  background: #fff;
-
-  --dz-background-color: #fff;
+  background: var(--dz-background-color);
 
   .container {
     overflow-x: hidden;
@@ -11,12 +9,10 @@ body.blog {
 .post-list {
   padding-left: 0;
   margin-top: 1rem;
+
   > li {
     list-style: none;
-
-    &:not(:first-of-type) {
-      margin-top: 2rem;
-    }
+    margin-top: 2rem;
 
     .post-meta {
       display: block;
