--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -16,5 +16,10 @@
     --dz-grouped-background-color: #222328;
     --dz-border-color: #373944;
     --dz-brand-color: #5E5CE6;
+    --dz-title-color: rgba(255,255,255,0.9);
+    --dz-subtitle-color: rgba(255,255,255,.5);
+    --dz-text-color: rgba(255,255,255,.75);
+    --dz-border-color: rgba(255,255,255,.12);
+    --muted-border-color: rgba(255,255,255,0.12);
   }
 }
