--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,15 +8,12 @@
   <title>{{ site.title }}</title>
   <meta property="og:title" content="{{ site.title }}" />
   {%- endif -%}
-  {%- if page.description -%}
-  <meta name="description" content="{{ page.description }}">
-  <meta property="og:description" content="{{ page.description }}" />
-  {%- elsif page.excerpt -%}
+  {%- if page.excerpt -%}
   <meta name="description" content="{{ page.excerpt | strip_html | strip }}">
   <meta property="og:description" content="{{ page.excerpt | strip_html | strip }}" />
-  {%- elsif page.content -%}
-  <meta name="description" content="{{ page.content | strip_html | truncatewords: 50 }}">
-  <meta property="og:description" content="{{ page.content | strip_html | truncatewords: 50 }}" />
+  {%- elsif page.description -%}
+  <meta name="description" content="{{ page.description }}">
+  <meta property="og:description" content="{{ page.description }}" />
   {%- else -%}
   <meta name="description" content="{{ site.description }}">
   <meta property="og:description" content="{{ site.description }}" />
@@ -26,7 +23,7 @@
   {%- elsif post.bannerImage -%}
   <meta property="og:image" content="{{ post.bannerImage | append: '@2x.png' | relative_url }}" />
   {%- else -%}
-  <meta property="og:image" content="{{ "/assets/images/headers/hero.jpg" | absolute_url }}" />
+  <meta property="og:image" content="{{ "/assets/images/home/hero-lockup-large.png" | absolute_url }}" />
   {%- endif -%}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="supported-color-schemes" content="light dark">
