absolute url for rss feed in blog feed
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -35,7 +35,7 @@
     {%- endif -%}
   </main>
   <div class="container readable" id="blog-footer-rss">
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | absolute_url }}">via RSS</a></p>
   </div>
   <div class="container readable">
     {%- include footer.html -%}
