updated assets for LP
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,25 +1,25 @@
 :root {
-  --dz-background-color: #F2F2F3;
+  --dz-background-color: color-mix(in display-p3, window 30%, Canvas);
   --dz-brand-color: #5856D6;
-  --dz-grouped-background-color: #f9f9fc;
-  --dz-border-color: #f1f1f5;
-  --dz-title-color: rgba(0,0,0,.8);
-  --dz-subtitle-color: rgba(0,0,0,.5);
-  --dz-text-color: rgba(0,0,0,.5);
-  --dz-border-color: rgba(0,0,0,.12);
+  --dz-grouped-background-color: Canvas;
+  --dz-title-color: color-mix(in display-p3, Canvas 8%, CanvasText);
+  --dz-subtitle-color: color-mix(in display-p3, Canvas 50%, CanvasText);
+  --dz-text-color: color-mix(in display-p3, Canvas 50%, CanvasText);
+  --dz-border-color: ButtonBorder;
+  --muted-border-color: ButtonBorder;
 }
 
 @media only screen and (prefers-color-scheme: dark) {
   :root, :root:not([data-theme=light]) {
     --color: #EFEFF0;
-    --dz-background-color: #2F3035;
-    --dz-grouped-background-color: #222328;
+    // --dz-background-color: #2F3035;
+    // --dz-grouped-background-color: #222328;
     --dz-border-color: #373944;
     --dz-brand-color: #5E5CE6;
-    --dz-title-color: rgba(255,255,255,0.9);
-    --dz-subtitle-color: rgba(255,255,255,.5);
-    --dz-text-color: rgba(255,255,255,.75);
-    --dz-border-color: rgba(255,255,255,.12);
-    --muted-border-color: rgba(255,255,255,0.12);
+    // --dz-title-color: rgba(255,255,255,0.9);
+    // --dz-subtitle-color: rgba(255,255,255,.5);
+    // --dz-text-color: rgba(255,255,255,.75);
+    // --dz-border-color: rgba(255,255,255,.12);
+    // --muted-border-color: rgba(255,255,255,0.12);
   }
 }
