--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,9 +6,8 @@
   {%- include nav.html -%}
   <header>
     <div class="container">
-      <picture>
-        <img src="/assets/images/home/appicon.png" srcset="/assets/images/home/appicon@2x.png 2x" width="200" height="200"/>
-        <source media="(max-width: 600px)" srcset="/assets/images/home/appicon-half.png 1x, /assets/images/home/appicon.png 2x">
+      <picture id="appicon">
+        <img src="/assets/images/home/appicon.png" srcset="/assets/images/home/appicon@2x.png 2x, /assets/images/home/appicon@3x.png 3x" width="170" height="170"/>
       </picture>
       <hgroup>
         <h1 class="section-header-xl">Elytra</h1>
