--- a/_sass/layouts/home.scss
+++ b/_sass/layouts/home.scss
@@ -2,6 +2,10 @@ body.home {
   max-width: 100vw;
   overflow-x: hidden;
 
+  picture {
+    display: block;
+  }
+
   main {
     max-width: 100vw;
     overflow-x: hidden;
