--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
     <div class="container">
       <picture>
         <img src="/assets/images/home/appicon.png" srcset="/assets/images/home/appicon@2x.png 2x" width="200" height="200"/>
-        <source media="(max-width: 600px)" srcset="/assets/images/home/appicon-half.png 1x, /assets/images/home/appicon.png 2x">
+        <source media="(max-width: 600px)" srcset="/assets/images/home/appicon-half.png 1x, /assets/images/home/appicon.png 2x" loading="eager"/>
       </picture>
       <hgroup>
         <h1 class="section-header-xl">Elytra</h1>
@@ -22,7 +22,7 @@
       <source media="(max-width: 600px) and (prefers-color-scheme: dark)" srcset="/assets/images/home/screens-dark-400w.png 1x, /assets/images/home/screens-dark-800w.png 2x, /assets/images/home/screens-dark@2x.png 3x">
       <source media="(min-width: 601px) and (max-width: 800px) and (prefers-color-scheme: dark)" srcset="/assets/images/home/screens-dark-800w.png 1x, /assets/images/home/screens-dark@2x.png 2x">
       <source media="(prefers-color-scheme: dark)" srcset="/assets/images/home/hero-dark.png 1x, /assets/images/home/screens-dark@2x.png 2x, /assets/images/home/screens-dark@3x.png 3x">
-      <img src="/assets/images/home/screens.png" srcset="/assets/images/home/screens@2x.png 2x, /assets/images/home/screens@3x.png 3x" width="1514" height="533" alt="Elytra's timeline and article reader displayed on iPad, iPhone and macOS."/>
+      <img src="/assets/images/home/screens.png" srcset="/assets/images/home/screens@2x.png 2x, /assets/images/home/screens@3x.png 3x" width="1514" height="533" alt="Elytra's timeline and article reader displayed on iPad, iPhone and macOS." loading="lazy"/>
     </picture>
   </header>
   <main>
