--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
           <picture id="post-banner">
             <source media="(max-width: 600px)" srcset="{{ page.bannerImage | append: '-400w.png' | absolute_url }} 1x, {{ page.bannerImage | append: '-800w.png' | absolute_url }} 2x, {{ page.bannerImage | append: '-1600w.png' | absolute_url }} 3x">
             <source media="(min-width: 601px) and (max-width: 800px)" srcset="{{ page.bannerImage | append: '-800w.png' | absolute_url }} 1x, {{ page.bannerImage | append: '-1600w.png' | absolute_url }} 2x, {{ page.bannerImage | append: '@3x.png' | absolute_url }} 3x">
-            <img src="{{ page.bannerImage | append: '.png' | absolute_url }}" srcset="{{ page.bannerImage | append: '@2x.png' | absolute_url }} 2x, {{ page.bannerImage | append: '@3x.png' | absolute_url }} 3x"/>
+            <img src="{{ page.bannerImage | append: '.png' | absolute_url }}" srcset="{{ page.bannerImage | append: '@2x.png' | absolute_url }} 2x, {{ page.bannerImage | append: '@3x.png' | absolute_url }} 3x" loading="lazy"/>
           </picture>
         {%- endif -%}
         <div class="article-content">
