--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,7 @@
   <header>
     <div class="container">
       <picture id="appicon">
+        <source media="(prefers-color-scheme: dark)" srcset="/assets/images/home/appicon-dark.png 1x, /assets/images/home/appicon-dark@2x.png 2x, /assets/images/home/appicon-dark@3x.png 3x"/>
         <img src="/assets/images/home/appicon.png" srcset="/assets/images/home/appicon@2x.png 2x, /assets/images/home/appicon@3x.png 3x" width="170" height="170" loading="eager"/>
       </picture>
       <hgroup>
