improved layout, new images for smart folders
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_includes/support.html
+++ b/_includes/support.html
@@ -34,7 +34,7 @@
         <h4 class="vault">Marketing</h4>
         <p>If you're a member of the press or looking to feature Elytra in your work, here's a link to our PR pack.</p>
 
-        <a href="https://www.icloud.com/iclouddrive/0denCijbRRXkmuKdOSBAhBrww#Screenshots" title="Elytra's PR Assets" class="external">View Assets</a>
+        <a href="https://www.icloud.com/iclouddrive/0OI6vs0Yn11cmO-c6g-RSR6xw#Screenshots" title="Elytra's PR Assets" class="external" target="_blank">View Assets</a>
       </div>
     </div>
   </div>
