--- a/_sass/layouts/home.scss
+++ b/_sass/layouts/home.scss
@@ -183,8 +183,8 @@ body.home {
   #smartfolders {
     > div {
       background: var(--dz-grouped-background-color);
-      border-radius: 22px;
-      padding: 16px 0 0 40px;
+      border-radius: 40px;
+      padding: 0 0 0 40px;
 
       .grid > div:first-of-type {
         padding-top: 8px;
