--- a/_sass/layouts/support.scss
+++ b/_sass/layouts/support.scss
@@ -23,9 +23,9 @@
       flex-direction: column;
       
       padding: 1rem;
-      border: 1px solid var(--dz-border-color);
+      border: 1px solid var(--dz-card-shadow);
       border-radius: 1rem;
-      background: var(--dz-background-color);
+      background: var(--dz-card-color);
     }
 
     a, button {
