include store buttons
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_includes/storebuttons.html
+++ b/_includes/storebuttons.html
@@ -1,6 +1,7 @@
-<div id="header-explore" class="container">
+<div class="container header-explore">
   <div class="grid">
     <a role="button" href="{{ site.url }}/store" title="Download Eytra from the Apple App Store" id="x-store" class="black rounded cta" tabindex="1"> App Store</a>
     <button title="Explore Eytra's features" class="black rounded cta" tabindex="2">Explore</button>
   </div>
+  <p class="caption" style="text-align: center;">Elytra is free to get started with. Elytra Pro subscription is required to add more than 10 feeds to your account.</p>
 </div>
