--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,13 +24,34 @@
       <source media="(prefers-color-scheme: dark)" srcset="/assets/images/home/hero-dark.png 1x, /assets/images/home/screens-dark@2x.png 2x, /assets/images/home/screens-dark@3x.png 3x">
       <img src="/assets/images/home/screens.png" srcset="/assets/images/home/screens@2x.png 2x, /assets/images/home/screens@3x.png 3x" width="1514" height="533" alt="Elytra's timeline and article reader displayed on iPad, iPhone and macOS." loading="lazy"/>
     </picture>
+
+    {%- include storebuttons.html -%}
   </header>
   <main>
     {{ content }}
   </main>
 
+  {%- include storebuttons.html -%}
+
   {%- include support.html -%}
 
   {%- include footer.html -%}
+  <script>
+    const exploreButtons = document.querySelectorAll(`button[title="Explore Eytra's features"]`);
+    const container = document.querySelector("main h2.section-heading");
+    // console.debug(container, exploreButtons)
+    const clickFn = (evt) => {
+      evt && evt.preventDefault();
+      container && container.scrollIntoView({
+        behavior: "smooth",
+        block: "start",
+        inline: "nearest"
+      });
+    };
+
+    exploreButtons.forEach(elem => {
+      elem.addEventListener("click", clickFn, false);
+    })
+  </script>
 </body>
 </html>
