new release post, blog css tweaks
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   {%- elsif post.bannerImage -%}
   <meta property="og:image" content="{{ post.bannerImage | append: '@2x.png' | absolute_url }}" />
   {%- else -%}
-  <meta property="og:image" content="{{ "/assets/images/home/hero-lockup-large.png" | absolute_url }}" />
+  <meta property="og:image" content="{{ "/assets/images/home/screens@2x.png" | absolute_url }}" />
   {%- endif -%}
   <link rel="me" href="https://social.dezinezync.com/@elytra"/>
   <link rel="icon" sizes="180x180" href="{{ "/assets/images/appicon/apple-touch-icon-180x180.png" | absolute_url }}" />
