--- a/_sass/layouts/blog.scss
+++ b/_sass/layouts/blog.scss
@@ -44,11 +44,12 @@ article {
     max-width: 100vw;
     display: flex;
     justify-content: center;
+    margin-bottom: 2rem;
 
     img {
-      width: auto;
-      max-width: unset;
-      height: 600px;
+      // width: auto;
+      // max-width: unset;
+      max-height: 600px;
     }
   }
 
