--- a/_layouts/login.html
+++ b/_layouts/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-IN" }}">
-{%- include head.html -%}
+{%- include "head.html" -%}
 <body class="login">
   <div id="login-contents">
     <header class="container readable center">
