--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-IN" }}">
-{%- include head.html -%}
+{%- include "head.html" -%}
 <body class="{% if page.style %}{{ page.style }}{% endif %} blog">
-  {%- include blogHeader.html -%}
+  {%- include "blogHeader.html" -%}
   <main>
-    {%- if paginator.total_pages > 0 -%}
+    {%- if pagination.items.length > 0 -%}
     <ul class="post-list">
-      {%- for post in paginator.posts -%}
+      {%- for post in pagination.items -%}
       <hr />
       <li class="container readable">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <h3>
           <a class="post-link" href="{{ post.url | absolute_url }}">
-            {{ post.title | escape }}
+            {{ post.data.title | escape }}
           </a>
         </h3>
         <small class="post-meta">{{ post.date | date: date_format }}</small>
-        {{ post.excerpt }}
+        {{ post.content | truncatewords: 50 }}
       </li>
       {%- endfor -%}
     </ul>
-    {% if paginator.total_pages > 1 %}
+    {% if pagination.pages.length > 1 %}
     <!-- Pagination links -->
     <div class="container readable pagination">
-      {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+      {% if pagination.href.previous %}
+        <a href="{{ pagination.href.previous }}" class="previous">Previous</a>
       {% endif %}
-      <span class="page_number ">Page {{ paginator.page }} of {{ paginator.total_pages }}</span>
-      {% if paginator.next_page %}
-        <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+      <span class="page_number ">Page {{ pagination.pageNumber | plus: 1 }} of {{ pagination.pages.length }}</span>
+      {% if pagination.href.next %}
+        <a href="{{ pagination.href.next }}" class="next">Next</a>
       {% endif %}
     </div>
     {% endif %}
@@ -38,8 +38,8 @@
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | absolute_url }}">via RSS</a></p>
   </div>
   <div class="container readable">
-    {%- include footer.html -%}
+    {%- include "footer.html" -%}
   </div>
-  {%- include blogStyler.html -%}
+  {%- include "blogStyler.html" -%}
 </body>
 </html>
