--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<h2 class="tag-header">Posts filed under <em>{{ page.tag }}</em></h2>
+<h2 class="tag-header">Posts filed under <em>{{ tag }}</em></h2>
 <ul class="posts">
-  {%- for post in site.categories[page.tag] -%}
-    {% include article.html %}
+  {%- for post in collections.categories[tag] -%}
+    {% include "post-summary.html" %}
   {%- endfor -%}
 </ul>
