--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-IN" }}">
-{%- include head.html -%}
+{%- include "head.html" -%}
 <body class="{% if page.style %}{{ page.style }}{% endif %} blog">
   <div class="container readable">
-    {%- include header.html -%}
+    {%- include "header.html" -%}
   </div>
   <main>
     <div class="container readable">
@@ -16,8 +16,8 @@
   </main>
 
   <div class="container readable">
-    {%- include footer.html -%}
+    {%- include "footer.html" -%}
   </div>
-  {%- include blogStyler.html -%}
+  {%- include "blogStyler.html" -%}
 </body>
 </html>
