--- a/index.liquid
+++ b/index.liquid
@@ -1,9 +1,7 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: home
 style: home
+permalink: /index.html
 ---
 
 <div class="container center">
