--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-IN" }}">
 {%- include "head.html" -%}
-<body class="{% if page.style %}{{ page.style }}{% endif %} blog">
+<body class="{% if style %}{{ style }} {% endif %}blog">
   {%- include "blogHeader.html" -%}
   {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
   <main>
