--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,4 @@
-// @import "theme";
+@import "../../_sass/launchkit";
 @import "../../_sass/variables";
 @import "../../_sass/mixins";
 @import "../../_sass/buttons";
