--- a/_layouts/mac.html
+++ b/_layouts/mac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-IN" }}">
 {%- include "head.html" -%}
-<body class="{% if page.style %}{{ page.style }}{% endif %}">
+<body{% if style %} class="{{ style }}"{% endif %}>
   <header>
     <div class="container">
       <picture>
