--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en-IN" }}">
 {%- include "head.html" -%}
-<body class="{% if page.style %}{{ page.style }}{% endif %} blog">
+<body class="{% if style %}{{ style }} {% endif %}blog">
   <div class="container readable">
     {%- include "header.html" -%}
   </div>
