new post, fixed config
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,20 +8,18 @@
     <hr />
     <article class="page-content no-style"> 
       <div class="container readable">
-        <h2>{{ page.title | escape }}</h2>
-        <div><small class="post-meta">{{ page.date | date: date_format }}</small><br /><br /></div>
-        {%- if page.bannerImage -%}
+        <h2>{{ title | escape }}</h2>
+        <div><small class="post-meta">{{ date | date: date_format }}</small><br /><br /></div>
+        {%- if bannerImage -%}
         </div>
           <picture id="post-banner">
-            <source media="(max-width: 600px)" srcset="{{ page.bannerImage | append: '-400w.png' | absolute_url }} 1x, {{ page.bannerImage | append: '-800w.png' | absolute_url }} 2x, {{ page.bannerImage | append: '-1600w.png' | absolute_url }} 3x">
-            <source media="(min-width: 601px) and (max-width: 800px)" srcset="{{ page.bannerImage | append: '-800w.png' | absolute_url }} 1x, {{ page.bannerImage | append: '-1600w.png' | absolute_url }} 2x, {{ page.bannerImage | append: '@3x.png' | absolute_url }} 3x">
-            <img src="{{ page.bannerImage | append: '.png' | absolute_url }}" srcset="{{ page.bannerImage | append: '@2x.png' | absolute_url }} 2x, {{ page.bannerImage | append: '@3x.png' | absolute_url }} 3x" loading="lazy"/>
+            <source media="(max-width: 600px)" srcset="{{ bannerImage | append: '-400w.png' | absolute_url }} 1x, {{ bannerImage | append: '-800w.png' | absolute_url }} 2x, {{ bannerImage | append: '-1600w.png' | absolute_url }} 3x">
+            <source media="(min-width: 601px) and (max-width: 800px)" srcset="{{ bannerImage | append: '-800w.png' | absolute_url }} 1x, {{ bannerImage | append: '-1600w.png' | absolute_url }} 2x, {{ bannerImage | append: '@3x.png' | absolute_url }} 3x">
+            <img src="{{ bannerImage | append: '.png' | absolute_url }}" srcset="{{ bannerImage | append: '@2x.png' | absolute_url }} 2x, {{ bannerImage | append: '@3x.png' | absolute_url }} 3x" loading="lazy"/>
           </picture>
           <div class="container readable">
         {%- endif -%}
-        <div class="article-content">
-          {{ content }}
-        </div>
+        <div class="article-content">{{ content }}</div>
       </div>
 
       <section class="page-post-content container readable">
